--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "ago",
   "version": "1.0.0",
-  "main": "js/src/index",
+  "main": "js/index",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee -cb -o js src",
+    "postinstall": "postinstall-build js 'npm run build'"
+  },
   "dependencies": {
     "Nan": "aleclarson/Nan#1.1.0",
     "assertType": "aleclarson/assertType#1.0.0",
-    "isType": "aleclarson/isType#1.0.0"
+    "isType": "aleclarson/isType#1.0.0",
+    "postinstall-build": "0.2.x"
   },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
+  "devDependencies": {
+    "coffee-script": "1.9.x"
   }
 }
