--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "ago",
-  "version": "1.0.0",
-  "main": "js/src/index",
-  "dependencies": {
-    "isType": "aleclarson/isType#1.0.0"
+  "version": "1.1.0",
+  "main": "js/index",
+  "plugins": [
+    "lotus-coffee"
+  ],
+  "scripts": {
+    "build": "coffee-build -v 1.11.x -b -o js src",
+    "postinstall": "npm run build"
   },
-  "lotus": {
-    "plugins": [
-      "lotus-coffee"
-    ]
+  "dependencies": {
+    "Nan": "aleclarson/Nan#1.1.1",
+    "assertType": "aleclarson/assertType#2.0.1",
+    "isType": "aleclarson/isType#1.0.1"
   }
 }
